# catkin_automatic_lift_Cluster

./: .gitignore  README.md  gitupdate.sh  start.sh  zl_crane_automatic_lift_trunk.workspace.user.24ac0a0  zl_crane_automatic_lift_trunk.workspace.user.7b84351  zl_crane_automatic_lift_trunk.workspace.user.7f90f50
src/HookLoadAntiCollisionDetection/: CMakeLists.txt  config.yaml  package.xml
src/HookLoadAntiCollisionDetection/include/HookLoadAntiCollisionDetection/: CollisionDetector.h  CraneInfo.h  HookLoadPositionAcquirer.h  ICPTracker.h  PCANManager.h  SocketCANManager.h  common.h  constants.h  pipeline.h  processbackend.h  utils.h
src/HookLoadAntiCollisionDetection/include/HookLoadAntiCollisionDetection/CSF/: CSF.h  Cloth.h  Constraint.h  Particle.h  Rasterization.h  XYZReader.h  c2cdist.h  point_cloud.h
src/HookLoadAntiCollisionDetection/launch/: system.launch
src/HookLoadAntiCollisionDetection/msg/: CraneStatus.msg
src/HookLoadAntiCollisionDetection/src/: CANBusCommNode.cpp  CollisionDetector.cpp  HookLoadPositionAcquirer.cpp  ICPTracker.cpp  PCANManager.cpp  SocketCANManager.cpp  main.cpp  pipeline.cpp  processbackend.cpp
src/HookLoadAntiCollisionDetection/src/CSF/: CSF.cpp  Cloth.cpp  Constraint.cpp  Particle.cpp  Rasterization.cpp  XYZReader.cpp  c2cdist.cpp  point_cloud.cpp
src/crane_autolift_system/include/crane_autolift_system/: JointState.pb.h  mqtt_client.h
src/livox_ros_driver/: CMakeLists.txt
src/objects_msg/: CMakeLists.txt  package.xml
src/objects_msg/msg/: object_attr.msg  objects_list.msg
src/zl_Crane_AutomaticLift_trunk/: CMakeLists.txt  package.xml
src/zl_Crane_AutomaticLift_trunk/configs/: manipulation_config.json
src/zl_Crane_AutomaticLift_trunk/include/zl_Crane_AutomaticLift_trunk/: CameraObject.hpp  GLwidget.hpp  HookLoadAntiCollisionDetector.hpp  JointState.pb.hpp  ObstacleDetection.hpp  PTZ_TCPClientSocket.hpp  QLabelEx.hpp  QTimerThread.hpp  clientusbtocancommunication.hpp  main_window.hpp  mqtt_client.hpp  path_generate_wrapper.hpp  qnode.hpp  receivertk.hpp  subscriberThread.hpp  udpRtk.hpp  zl_common_define.hpp
src/zl_Crane_AutomaticLift_trunk/launch/: laser_driver.launch  zl_crane_automaticlift_trunk.launch
src/zl_Crane_AutomaticLift_trunk/resources/: images.qrc
src/zl_Crane_AutomaticLift_trunk/src/: CameraObject.cpp  GLwidget.cpp  JointState.pb.cc  JointState.proto  ObstacleDetection.cpp  PTZ_TCPClientSocket.cpp  QLabelEx.cpp  QTimerThread.cpp  clientusbtocancommunication.cpp  main.cpp  main_window.cpp  mqtt_client.cpp  path_generate_wrapper.cpp  qnode.cpp  receivertk.cpp  subscriberThread.cpp  udpRtk.cpp
src/zl_Crane_AutomaticLift_trunk/ui/: main_window.ui
